<resources>
    <string name="greetings">Greetings</string>

    <string name="app_name">fooddeliveryproject</string>
    <string name="explore">Explore</string>
    <string name="restaurants">Restaurants</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="images">Images</string>

    <string name="warning">Warning!</string>
    <string name="warning_removeitems_text">You are trying to add items from multiple restaurants, and you can only order from one restaurant at a time with WoopWoop!
                                            \n\nIf you wish and add the new item press "OK", but doing so will also empty your cart. Press "cancel" to keep your current order.</string>

    <string name="cancel">Cancel</string>
    
    <string name="rate_restaurant">Click on the stars below to rate
                                    \n%2s</string>
    <string name="rate_feedback">Thank you for the feedback!</string>


    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="excellent">Excellent</string>

    <string name="thank_you">Thank you for using WoopWoop!
                            \nWe hope to see you again soon!</string>
    <string name="time_of_delivery"></string>
    <string name="delivery_information">Order will be delivered to: </string>
    <string name="order_success">Your order has successfully been sent!</string>
    <string name="ordernumber">Order number:</string>
    <string name="receipt_sent">A receipt has been sent to your email-address.</string>
    <string name="all_categories">All categories</string>
    <string name="top_rated">Top rated</string>
    <string name="hamburgers">Hamburgers</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="mexican">Mexican</string>
    <string name="thai">Thai</string>
    <string name="kebab">Kebab</string>
    <string name="indian">Indian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="italian">Italian</string>
    <string name="order_again">"Order again"</string>
    <string name="order_history">"Order history"</string>
    <string name="complete_orderhistory">Complete order history</string>
    <string name="user_adress">Type your address</string>
    <string name="welcome">WELCOME</string>
    <string name="continue_button">Continue</string>
    <string name="settings">Settings</string>
    <string name="save_setting">Save setting</string>

    <string name="order_total">Total:</string>
    <string name="sales_tax">VAT: </string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone number</string>
    <string name="register">Register</string>

    <string name="no_recent_order">No recent order</string>
    <string name="sign_in_to_order">You have to sign in to order!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="go_back">Go back</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_address">Enter delivery address</string>
    <string name="enter_phonenr">Enter phone number</string>
    <string name="restaurant">Restaurant</string>
    <string name="empty_orderlist">Add items by clicking \"Explore\"</string>
    <string name="recent_order">Most recent order</string>
    <string name="empty_shoppingcart">The shoppingcart is empty.
                                    \nAdd items to order</string>
    <string name="queryhint">Enter restaurant name</string >

    <string name="tacos">Tacos</string>
    <string name="menus">Menus</string>
    <string name="main_dish">Main dish</string>
    <string name="curry">Curry</string>
    <string name="add_to_order">Add to order</string>
    <string name="deliveryFee">%1s kr</string>

    <string name="error_reqinfo">Enter the required information to sign up.</string>

    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="price">Price</string>
    <string name="delivery_fee">Delivery_fee</string>
    <string name="add_new_dish">Add new dish</string>
    <string name="enter_dish_name">Enter dish name</string>
    <string name="enter_dish_price">Enter dish price</string>
    <string name="save_settings">Save settings</string>


    <string name="no_empty_fields">Please enter your %1s</string>
    <string name="incorrect_login">Incorrect username or password. Try again</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>