<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.restaurant.RestaurantEditMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/restaurantDishNameEditText"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:hint="@string/enter_dish_name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/restaurantDishNameEditView"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/restaurantSaveMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/restaurant_blue"
            android:text="@string/save_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantDishPriceEditText" />

        <Button
            android:id="@+id/restaurantEditMenuGoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/restaurant_blue"
            android:text="@string/go_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantDishPriceEditView" />

        <TextView
            android:id="@+id/restaurantDishNameEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="175dp"
            android:text="@string/name"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurantDishPriceEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp"
            android:text="@string/price"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantDishNameEditView" />

        <EditText
            android:id="@+id/restaurantDishPriceEditText"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:hint="@string/enter_dish_price"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/restaurantDishPriceEditView"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>