<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.user.ProfileFragment"
    tools:layout_editor_absoluteX="7dp"
    tools:layout_editor_absoluteY="-155dp">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp">


        <TextView
            android:id="@+id/greetingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/greetings"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settingsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="195dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/usersettings_list" />

        <TextView
            android:id="@+id/settingsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/settingsRecyclerView"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_lastOrderRecyclerView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/completeOrderViewLayout"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastOrderRestaurantNameTextView"
            app:layout_constraintVertical_bias="0.203" />

        <TextView
            android:id="@+id/orderAgainHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="108dp"
            android:text="@string/order_again"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetingsTextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/woopwoop_green"
            android:text="@string/order_again"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/lastOrderRestaurantNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/orderAgainHeaderTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/completeOrderViewLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/settingsHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_rightarrow" />

            <TextView
                android:id="@+id/completeOrderHistoryTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/complete_orderhistory"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="14dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lastOrderRestaurantNameTextView"
            android:layout_width="185dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/restaurant"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderAgainHeaderTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>