<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.restaurant.RestaurantEditSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/usersettings_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/restaurantSaveSettingsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/restaurantImageView"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_rightarrow" />

            <View
                android:id="@+id/restaurantLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="12dp"
                android:background="#707070"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText

                android:id="@+id/restaurantAttributeToChangeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="46dp"
                android:layout_marginBottom="19dp"
                android:background="@color/white"
                android:text="Alexander"
                android:textColor="#333333"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/restaurantLine"
                app:layout_constraintEnd_toStartOf="@+id/restaurantImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/restaurantSettingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textColor="#333333"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/restaurantAttributeToChangeEditText"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/restaurantEditSettingsGoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/restaurant_blue"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/restaurantSaveSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/restaurant_blue"
            android:text="@string/save_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>